# blockvy

./: .gitignore  Cargo.toml  README.md  mise.toml
assets/shaders/: line_clear.wgsl
scripts/: build-web.sh
src/: main.rs
src/audio/: mod.rs
src/board/: active_piece.rs  clear_delay.rs  collision.rs  ghost.rs  gravity.rs  grid.rs  lines.rs  lock.rs  mod.rs  plugin.rs  rotation.rs
src/game/: mod.rs  plugin.rs  rules.rs  score.rs  state.rs
src/input/: autoshift.rs  keyboard.rs  mod.rs  plugin.rs  timing.rs
src/persistence/: mod.rs
src/pieces/: bag.rs  mod.rs  rotation.rs  srs.rs  tetromino.rs  wall_kicks.rs
src/ui/: block_color.rs  block_sprite.rs  board_panel.rs  board_render.rs  clear_animation.rs  game_over.rs  home.rs  layout.rs  menu_button.rs  mod.rs  next_panel.rs  options.rs  pause.rs  plugin.rs  score_panel.rs
web/: index.html
